k8s-rewrite/charts/media-stack/qbittorrent/service.yaml
# qBittorrent Service
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui
  namespace: plex
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8112
      targetPort: 8112
      name: http
  selector:
    app: qbittorrent-vpn
